changed file manager to nemo

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -91,6 +91,7 @@ windowrulev2 = float, onworkspace:$WORKSPACE
 $WORKSPACE=8
 windowrulev2 = workspace $WORKSPACE, class:^(.*Nautilus)$
 windowrulev2 = workspace $WORKSPACE, class:^(.*dolphin)$
+windowrulev2 = workspace $WORKSPACE, class:^(nemo)$
 
 
 
