--- a/compositors/hyprland/dotfiles/dot_config/qt6ct/qt6ct.conf
+++ b/compositors/hyprland/dotfiles/dot_config/qt6ct/qt6ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\xe\xdd\0\0\b\x1a\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\b<\0\0\0\0\x2\0\0\0\xf\0\0\0\0\0\0\0\0\0\0\0\xe\xdd\0\0\b\x1a)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x6\x31\0\0\x3J\0\0\0\0\0\0\0\0\0\0\x6?\0\0\x3\x83\0\0\0\0\x2\0\0\0\x6@\0\0\0\0\0\0\0\0\0\0\x6\x31\0\0\x3J)
 
 [Troubleshooting]
 force_raster_widgets=1
