fix big size in all floating windows

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -25,7 +25,6 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 # maxsize de la ventana cuando esta en modo flotante
 windowrulev2 = minsize 700 500, floating:1
 windowrulev2 = maxsize 1400 800, floating:1
-windowrulev2 = center, floating:1
 
 #windowrulev2 = noanim, onworkspace:9
 #windowrulev2 = norounding, onworkspace:5
@@ -44,7 +43,7 @@ windowrulev2 = maximize, class:^(Brave.*)$
 #windowrulev2 = maximize, class:^(.*Nautilus)$
 
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
-#windowrulev2 = center, class:^(.*desktop-portal-gtk)$
+windowrulev2 = center, class:^(.*desktop-portal-gtk)$
 
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
@@ -83,7 +82,7 @@ $WORKSPACE=6
 
 # workspace 7
 $WORKSPACE=7
-windowrulev2 = float, onworkspace:$WORKSPACE
+#windowrulev2 = float, onworkspace:$WORKSPACE
 
 
 
