fix ui issue in workspace 1 with ides

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -48,19 +48,29 @@ windowrulev2 = center, class:^(.*desktop-portal-gtk)$
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
 
+
+# -------------------------------------------------------------------------
+
 # workspace 1
 $WORKSPACE=1
 windowrulev2 = workspace $WORKSPACE, class:^(jetbrains-.*)$
 windowrulev2 = workspace $WORKSPACE, class:^(.*codium)$
-#windowrulev2 = opaque, onworkspace:$WORKSPACE
+windowrulev2 = noblur, onworkspace:$WORKSPACE
+#windowrulev2 = noanim, onworkspace:$WORKSPACE
+windowrulev2 = opaque, onworkspace:$WORKSPACE
+
+
 
 # workspace 2
 $WORKSPACE=2
 windowrulev2 = workspace $WORKSPACE, class:^(.*Postman.*)$
 
+
+
 # workspace 3
 $WORKSPACE=3
 windowrulev2 = workspace $WORKSPACE, class:^(Brave.*)$
+
 
 
 # workspace 4
@@ -71,7 +81,6 @@ windowrulev2 = workspace $WORKSPACE, class:^(.*chrome.*)$
 
 # workspace 5
 $WORKSPACE=5
-
 
 
 
