ark window rules

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -45,6 +45,10 @@ windowrulev2 = maximize, class:^(Brave.*)$
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
 windowrulev2 = center, class:^(.*desktop-portal-gtk)$
 
+windowrulev2 = float, class:^(org.kde.ark)$
+windowrulev2 = center, class:^(org.kde.ark)$
+windowrulev2 = size 60% 80%, class:^(org.kde.ark)$
+
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
 
