fixup float hint window size

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -1,9 +1,9 @@
 # reglas de ventana
 
 # default start
-windowrule = tile,^(Microsoft-edge)$
-windowrule = tile,^(Brave-browser)$
-windowrule = tile,^(Chromium)$
+#windowrule = tile,^(Microsoft-edge)$
+#windowrule = tile,^(Brave-browser)$
+#windowrule = tile,^(Chromium)$
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
@@ -23,7 +23,9 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 #windowrulev2 = focusonactivate, class:^(.*.*)$
 
 # maxsize de la ventana cuando esta en modo flotante
-windowrulev2 = minsize 700 500, floating:1
+
+# no se usara el minsize hasta que pueda diferenciar entre ventanas flotantes para hint y normales
+#windowrulev2 = minsize 700 500, floating:1
 windowrulev2 = maxsize 1400 800, floating:1
 
 #windowrulev2 = noanim, onworkspace:9
@@ -51,7 +53,6 @@ windowrulev2 = size 60% 80%, class:^(org.kde.ark)$
 
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
-
 
 # -------------------------------------------------------------------------
 
