--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/keybindings/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/keybindings/default.conf
@@ -146,7 +146,7 @@ bind = $mainMod SHIFT, S, exec, $HYPRSCRIPTS/screenshot.sh # Take a screenshot
 bind = $mainMod SHIFT, W, exec, waypaper # Open wallpaper selector
 bind = $mainMod CTRL, RETURN, exec, pkill rofi || rofi -show drun -replace -i # Open application launcher
 bind = ALT, R, exec, ~/.config/waybar/launch.sh # Reload waybar
-#bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh # Toggle waybar
+bind = ALT, W, exec, ~/.config/waybar/toggle.sh # Toggle waybar
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh # Open clipboard manager
 bind = $mainMod CTRL, T, exec, ~/.config/waybar/themeswitcher.sh # Open waybar theme switcher
 #bind = $mainMod CTRL, S, exec, ~/.config/ml4w/apps/ML4W_Dotfiles_Settings-x86_64.AppImage # Open ML4W Dotfiles Settings app
@@ -255,15 +255,15 @@ bind = $mainMod SHIFT, M, fullscreen, 1
 bind = $mainMod SHIFT, F, layoutmsg, focusmaster
 bind = $mainMod SHIFT, F, fullscreen, 0
 
-bind = $mainMod, HOME, exec, $TERMINAL --class dotfiles-floating -e btop
-bind = $mainMod, END, exec, $TERMINAL --class dotfiles-floating -e pacseek
+bind = $mainMod, HOME, exec, $TERMINAL --class console-utils -e btop
+bind = $mainMod, END, exec, $TERMINAL --class console-utils -e pacseek
 bind = $mainMod, NEXT, layoutmsg, cyclenext
 bind = $mainMod, PRIOR, layoutmsg, cycleprev
 
 bind = ALT, M, layoutmsg, focusmaster
 bind = ALT, up, layoutmsg, addmaster
 bind = ALT, down, layoutmsg, removemaster
-bind = ALT, W, exec, killall waybar && pkill waybar
+#bind = ALT, W, exec, killall waybar && pkill waybar
 
 bind = ALT SHIFT, 5, layoutmsg, mfact exact 0.5
 bind = ALT SHIFT, 6, layoutmsg, mfact exact 0.6
