--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/ml4w.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/ml4w.conf
@@ -86,6 +86,14 @@ windowrulev2 = size 1000 700,class:(dotfiles-floating)
 windowrulev2 = center,class:(dotfiles-floating)
 windowrulev2 = pin, class:(dotfiles-floating)
 
+# Console Utils Window
+$custom_class = console-utils
+windowrulev2 = float, class:($custom_class)
+windowrulev2 = size 100% 100%, class:($custom_class)
+windowrulev2 = center, class:($custom_class)
+windowrulev2 = pin, class:($custom_class)
+
+
 # XDG Desktop Portal
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
