--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -23,14 +23,14 @@ windowrulev2 = move 69.5% 4%, title:^(Picture-in-Picture)$
 #windowrulev2 = focusonactivate, class:^(.*.*)$
 
 # maxsize de la ventana cuando esta en modo flotante
-
 # no se usara el minsize hasta que pueda diferenciar entre ventanas flotantes para hint y normales
 #windowrulev2 = minsize 700 500, floating:1
-windowrulev2 = maxsize 1400 800, floating:1
 
-#windowrulev2 = noanim, onworkspace:9
-#windowrulev2 = norounding, onworkspace:5
+# max size da problemas con los menu de opciones del ide
+#windowrulev2 = maxsize 1400 800, floating:1
 
+
+# ------------------------------------------------------------------------
 # tipos de visualizacion
 #windowrulev2 = fullscreen, class:^(kitty)$
 windowrulev2 = fullscreen, class:^(whatsdesk)$
@@ -44,12 +44,20 @@ windowrulev2 = maximize, class:^(Brave.*)$
 #windowrulev2 = maximize, class:^(.*codium)$
 #windowrulev2 = maximize, class:^(.*Nautilus)$
 
+# desktop portal
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
 windowrulev2 = center, class:^(.*desktop-portal-gtk)$
 
+# ark
 windowrulev2 = float, class:^(org.kde.ark)$
 windowrulev2 = center, class:^(org.kde.ark)$
-windowrulev2 = size 60% 80%, class:^(org.kde.ark)$
+windowrulev2 = size 50% 80%, class:^(org.kde.ark)$
+
+# nemo file roller
+windowrulev2 = float, class:^(.*FileRoller)$
+windowrulev2 = center, class:^(.*FileRoller)$
+
+# -------------------------------------------------------------------------
 
 # bordes
 windowrulev2 = noborder on, fullscreenstate:* 1
