change noborder property adapted to new hyprland version

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -60,7 +60,8 @@ windowrulev2 = center, class:^(.*FileRoller)$
 # -------------------------------------------------------------------------
 
 # bordes
-windowrulev2 = noborder on, fullscreenstate:* 1
+windowrulev2 = noborder, fullscreenstate:* 1
+
 
 # -------------------------------------------------------------------------
 
