--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -57,6 +57,16 @@ windowrulev2 = size 50% 80%, class:^(org.kde.ark)$
 windowrulev2 = float, class:^(.*FileRoller)$
 windowrulev2 = center, class:^(.*FileRoller)$
 
+# Gnome Calendar
+windowrulev2 = float, class:^(.*Calendar)$
+windowrulev2 = center, class:^(.*Calendar)$
+windowrulev2 = float, class:^(.*calendar)$
+windowrulev2 = center, class:^(.*calendar)$
+
+# Gnome Calendar
+windowrulev2 = float, class:^(nemo-terminal-prefs)$
+windowrulev2 = center, class:^(nemo-terminal-prefs)$
+
 # -------------------------------------------------------------------------
 
 # bordes
