--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -63,9 +63,17 @@ windowrulev2 = center, class:^(.*Calendar)$
 windowrulev2 = float, class:^(.*calendar)$
 windowrulev2 = center, class:^(.*calendar)$
 
-# Gnome Calendar
+
+# Nemo Terminal
 windowrulev2 = float, class:^(nemo-terminal-prefs)$
 windowrulev2 = center, class:^(nemo-terminal-prefs)$
+
+
+# Gwenview
+windowrulev2 = float, class:^(.*gwenview)$
+windowrulev2 = center, class:^(.*gwenview)$
+windowrulev2 = size 50% 80%, class:^(.*gwenview)$
+
 
 # -------------------------------------------------------------------------
 
