--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/environments/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/environments/default.conf
@@ -10,3 +10,5 @@ env = AQ_DRM_DEVICES,/dev/dri/card1
 #env = XDG_SESSION_DESKTOP,KDE
 #env = XDG_CURRENT_DESKTOP,KDE
 #env = QT_STYLE_OVERRIDE,Breeze
+
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
