add httpie desktop

--- a/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
+++ b/compositors/hyprland/dotfiles/dot_config/hypr/conf/windowrules/default.conf
@@ -37,12 +37,15 @@ windowrulev2 = fullscreen, class:^(whatsdesk)$
 windowrulev2 = fullscreen, class:^(.*telegram.*)$
 windowrulev2 = fullscreen, class:^(.*Spotify.*)$
 windowrulev2 = fullscreen, class:^(.*Postman.*)$
+windowrulev2 = fullscreen, class:^(.*HTTPie.*)$
+
 
 windowrulev2 = maximize, class:^(.*chrome.*)$
 windowrulev2 = maximize, class:^(Brave.*)$
 #windowrulev2 = maximize, class:^(jetbrains-.*)$
 #windowrulev2 = maximize, class:^(.*codium)$
 #windowrulev2 = maximize, class:^(.*Nautilus)$
+
 
 # desktop portal
 windowrulev2 = float, class:^(.*desktop-portal-gtk)$
@@ -96,7 +99,7 @@ windowrulev2 = opaque, onworkspace:$WORKSPACE
 # workspace 2
 $WORKSPACE=2
 windowrulev2 = workspace $WORKSPACE, class:^(.*Postman.*)$
-
+windowrulev2 = workspace $WORKSPACE, class:^(.*HTTPie.*)$
 
 
 # workspace 3
